tests/ui/errors/snapshots/infer_record_struct_as_value.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot use struct type as a value
   ╭─[test.lis:5:11]
 4 │ fn main() {
 5 │   let c = Coord
   ·           ──┬──
   ·             ╰── struct types cannot be used as expressions
 6 │   let _ = c
   ╰────
  help: Use a struct literal instead: `Coord { field: value, ... }` · code: [infer.record_struct_value]
