tests/ui/errors/snapshots/infer_recover_block_break.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `break` in `recover` block
   ╭─[test.lis:4:15]
 3 │   for i in [1, 2, 3] {
 4 │     recover { break };
   ·               ──┬──
   ·                 ╰── not allowed inside `recover` block
 5 │   }
   ╰────
  help: Remove the `break`, or move it inside a loop within the `recover` block · code: [infer.recover_block_break]
