tests/ui/errors/snapshots/infer_recover_block_defer.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `defer` in `recover` block
   ╭─[test.lis:6:5]
 5 │   let result = recover {
 6 │     defer cleanup()
   ·     ───────┬───────
   ·            ╰── not inside a function
 7 │     42
   ╰────
  help: Move the `defer` outside the `recover` block, so it runs when the function returns · code: [infer.recover_block_defer]
