tests/ui/errors/snapshots/infer_recover_cannot_use_question_mark.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `?` in `recover` block
   ╭─[test.lis:5:13]
 4 │ fn test() {
 5 │   recover { fallible()? }
   ·             ─────┬─────
   ·                  ╰── cannot propagate to `recover` block
 6 │ }
   ╰────
  help: Use a `try` block inside the `recover` block, or handle the `Result` explicitly · code: [infer.recover_cannot_use_question_mark]
