tests/ui/errors/snapshots/infer_redundant_as_literal.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Redundant `as` binding
   ╭─[test.lis:4:5]
 3 │   match x {
 4 │     42 as m => m,
   ·     ───┬───
   ·        ╰── `m` is always `42`
 5 │     _ => 0,
   ╰────
  help: Replace `42 as m` with just `42` · code: [infer.redundant_as_binding]
